force-app/main/default/objects/custom_create48__c/custom_create48__c.object-meta.xml
<CustomObject>
    <label>Custom created object48</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects48</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>