force-app/main/default/objects/custom_create48__c/fields/custom_create_48field541__c.field-meta.xml
<CustomField>
    <fullName>custom_create_48field541__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 48field541</label>
    <type>Checkbox</type>
</CustomField>