force-app/main/default/objects/custom_create48__c/fields/custom_create_48field553__c.field-meta.xml
<CustomField>
    <fullName>custom_create_48field553__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 48field553</label>
    <type>Checkbox</type>
</CustomField>